fix style bug and add new innovation

--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -22,6 +22,10 @@ input[type=text] {
     transition: all .3s ease;
 }
 
+.divide_darkmode{
+    display: none;
+}
+
 .contact_user_info {
     display: grid;
     gap: 2rem;
