--- a/src/components/Modal_Contact/Modal_Contact.css
+++ b/src/components/Modal_Contact/Modal_Contact.css
@@ -93,7 +93,7 @@
     padding-top: 1rem;
 }
 
-.send_message {
+.send_message:hover {
     box-shadow: 10px 5px 5px rgba(51, 51, 255, .2);
 }
 
@@ -113,6 +113,8 @@
     border: none;
     border-radius: 2px;
     background: rgb(230, 7, 7);
+}
+.close_modal_button:hover {
     box-shadow: 10px 5px 5px rgba(51, 51, 255, .2);
 }
 
